deployment-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: second-app
  template:
    metadata:
      labels:
        app: second-app
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
