nginx_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: newnginx
  template:
    metadata:
      labels:
        app: newnginx
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
          - containerPort: 80
