second-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-service
spec:
  selector:
    app: second-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
